--- a/GoogleGocsHelper/GoogleGocsHelper.csproj
+++ b/GoogleGocsHelper/GoogleGocsHelper.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,11 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.OleDb" Version="8.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\DocWorker\DocWorker.csproj" />
+    <PackageReference Include="Google.Apis.Docs.v1" Version="1.67.0.3193" />
   </ItemGroup>
 
 </Project>
