Review after mapping

--- a/StatLib/StatLib.csproj
+++ b/StatLib/StatLib.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Accord.Statistics" Version="3.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CommonLib\CommonLib.csproj" />
+  </ItemGroup>
+
 </Project>
