--- a/DataTerminal/DataTerminal.csproj
+++ b/DataTerminal/DataTerminal.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.IO.Ports" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CommonLib\CommonLib.csproj" />
+  </ItemGroup>
+
 </Project>
