--- a/CommonLib/CommonLib.csproj
+++ b/CommonLib/CommonLib.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ExcelHelper.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PostgresLib\PostgresLib.csproj" />
   </ItemGroup>
 
