--- a/CommonLib/CommonLib.csproj
+++ b/CommonLib/CommonLib.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Office.Interop.Outlook" Version="15.0.4797.1004" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PostgresLib\PostgresLib.csproj" />
   </ItemGroup>
 
